gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23816.d
version https://git-lfs.github.com/spec/v1
oid sha256:8e417c52d6c05188f3f0c4572610027831248659d46a89b95506e864150a9dc7
size 196
